--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/passport-new.jpg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="./assets/img/passport-new.jpg" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
       
@@ -142,7 +142,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Mutasim's resume in a new tab" href="https://mbahnaf.github.io/assets/resume/Mutasim_Billah_resume.pdf" target="_blank"
+        <a aria-label="Open Mutasim's resume in a new tab" href="https://mbahnaf.github.io/portfolio/assets/resume/Mutasim_Billah_resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -246,12 +246,12 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://bjitgroup.com" target="_blank"><img alt="Cignex logo"
+                <a href="https://bjitgroup.com" target="_blank"><img alt="BJIT logo"
                     src="/assets/img/bjit.png" class="responsive-img center-block" /></a>
               </div>
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.cignex.com" target="_blank"
+                  <span class="card-title"><a href="https://bjitgroup.com" target="_blank"
                       class="teal-text hoverline">BJIT Group</a></span>
                 </p>
               </div>
@@ -280,7 +280,7 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.meditab.com" target="_blank"><img alt="Meditab logo"
+                <a href="https://veostr.com" target="_blank"><img alt="VEOSTR logo"
                     src="/assets/img/veostr.jpeg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
@@ -323,7 +323,7 @@
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.zhiffy.com/" target="_blank"
+                  <span class="card-title"><a href="https://jadoobroadband.com/" target="_blank"
                       class="teal-text hoverline">Jadoo Broadband</a></span>
                 </p>
               </div>
@@ -403,7 +403,7 @@
           <div class="col s12 m4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="quiz app" src="/assets/img/multiviewer.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="quiz app" src="./assets/img/multiviewer.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Multiviewer System<i
