--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           <div class="col s12 m4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="quiz app" src="./assets/img/multiviewer.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="quiz app" src="/assets/img/multiviewer.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Multiviewer System<i
