--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   <!-- End Google Tag Manager -->
 
   <!-- Materialize - Compiled and minified CSS-->
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="css/main.css" />
   <!-- Font Awesome Icon - CSS-->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
@@ -568,7 +572,7 @@
             <h4 class="brown-text light">Tools and Technologies</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/git.png" class="responsive-img" width="100" height="100"/><h5>Git</h5>
+                <img alt="" src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" class="responsive-img" width="100" height="100"/><h5>Git</h5>
               </div>
               <div class="col s4 m2">
                 <img alt="" src="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-ar21.svg" class="responsive-img"/><h5>AWS</h5>
