--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Font Awesome Icon - CSS-->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/css/style.css" />
   <title>Muhammad Mutasim Billah | DevOps</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -49,22 +49,22 @@
   <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
   <meta name="author" content="Varad Bhogayata" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
-  <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
-  <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" />
-  <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon/apple-icon-76x76.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon/apple-icon-114x114.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="/assets/img/favicon/apple-icon-120x120.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="/assets/img/favicon/apple-icon-144x144.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/img/favicon/apple-icon-152x152.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-icon-180x180.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/android-icon-192x192.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96x96.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png" />
-  <link rel="manifest" href="/assets/img/favicon/manifest.json" />
+  <link rel="apple-touch-icon" sizes="57x57" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/apple-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/apple-icon-60x60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/apple-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/apple-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/apple-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/apple-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/apple-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/apple-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/apple-icon-180x180.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/android-icon-192x192.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/favicon-96x96.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/favicon-16x16.png" />
+  <link rel="manifest" href="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/manifest.json" />
   <meta name="msapplication-TileColor" content="#ffffff" />
-  <meta name="msapplication-TileImage" content="/assets/img/favicon/ms-icon-144x144.png" />
+  <meta name="msapplication-TileImage" content="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/favicon/ms-icon-144x144.png" />
   <meta name="theme-color" content="#ffffff" />
   <meta name="robots" content="index, follow" />
   <!-- Google Site Verification for indexing -->
@@ -84,7 +84,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="./assets/img/passport-new.jpg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="./mbahnaf-portfolio/assets/img/passport-new.jpg" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
       
@@ -142,7 +142,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Mutasim's resume in a new tab" href="https://mbahnaf.github.io/portfolio/assets/resume/Mutasim_Billah_resume.pdf" target="_blank"
+        <a aria-label="Open Mutasim's resume in a new tab" href="https://mbahnaf.github.io/mbahnaf-portfolio/mbahnaf-portfolio/assets/resume/Mutasim_Billah_resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -187,7 +187,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Mutasim's Resume in a new tab"
-          href="https://mbahnaf.github.io/assets/resume/Mutasim_Billah_resume.pdf" target="_blank"
+          href="https://mbahnaf.github.io/mbahnaf-portfolio/mbahnaf-portfolio/assets/resume/Mutasim_Billah_resume.pdf" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
@@ -247,7 +247,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://bjitgroup.com" target="_blank"><img alt="BJIT logo"
-                    src="/assets/img/bjit.png" class="responsive-img center-block" /></a>
+                    src="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/bjit.png" class="responsive-img center-block" /></a>
               </div>
               <div class="col s12 m10">
                 <p>
@@ -281,7 +281,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://veostr.com" target="_blank"><img alt="VEOSTR logo"
-                    src="/assets/img/veostr.jpeg" class="responsive-img center-block" /></a>
+                    src="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/veostr.jpeg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -318,7 +318,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://jadoobroadband.com" target="_blank"><img alt="Zhiffy logo"
-                    src="/assets/img/digijadoo.png" class="responsive-img center-block" /></a>
+                    src="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/digijadoo.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -363,7 +363,7 @@
           <div class="col s12 m4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="music streaming app" src="/assets/img/data-fire-logo.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="music streaming app" src="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/data-fire-logo.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">DataFire Networks<i
@@ -403,7 +403,7 @@
           <div class="col s12 m4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="quiz app" src="/assets/img/multiviewer.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="quiz app" src="/mbahnaf-portfolio/mbahnaf-portfolio/assets/img/multiviewer.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Multiviewer System<i
@@ -444,7 +444,7 @@
           <div class="col s12 m4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/veostr-cloud.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/mbahnaf-portfolio/assets/img/veostr-cloud.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">KRC Cloud Solution<i
@@ -490,23 +490,23 @@
             <h4 class="brown-text light">Languages and Databases</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />
+                <img alt="" src="/mbahnaf-portfolio/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />
                 <h5>Python</h5>
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" /><h5>HTML5</h5>
+                <img alt="" src="/mbahnaf-portfolio/assets/img/html5-300x300.jpg" class="responsive-img" /><h5>HTML5</h5>
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" /><h5>CSS3</h5>
+                <img alt="" src="/mbahnaf-portfolio/assets/img/css3-300x300.jpg" class="responsive-img" /><h5>CSS3</h5>
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" /><h5>MySQL</h5>
+                <img alt="" src="/mbahnaf-portfolio/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" /><h5>MySQL</h5>
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" /><h5>PostgreSQL</h5>
+                <img alt="" src="/mbahnaf-portfolio/assets/img/postgresql-logo.png" class="responsive-img" /><h5>PostgreSQL</h5>
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" /><h5>Bash</h5>
+                <img alt="" src="/mbahnaf-portfolio/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" /><h5>Bash</h5>
               </div>
             </div>
           </div>
@@ -517,19 +517,19 @@
             <h4 class="brown-text light">Libraries</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
+                <img alt="" src="/mbahnaf-portfolio/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
+                <img alt="" src="/mbahnaf-portfolio/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
+                <img alt="" src="/mbahnaf-portfolio/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
+                <img alt="" src="/mbahnaf-portfolio/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
+                <img alt="" src="/mbahnaf-portfolio/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
               </div>
             </div>
           </div>
@@ -541,22 +541,22 @@
             <h4 class="brown-text light">Frameworks</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/django-logo.webp" class="responsive-img" />Django
+                <img alt="" src="/mbahnaf-portfolio/assets/img/django-logo.webp" class="responsive-img" />Django
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
+                <img alt="" src="/mbahnaf-portfolio/assets/img/flask-logo.png" class="responsive-img" />Flask
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
+                <img alt="" src="/mbahnaf-portfolio/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
+                <img alt="" src="/mbahnaf-portfolio/assets/img/keras-logo.png" class="responsive-img" />Keras
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" />TensorFlow
+                <img alt="" src="/mbahnaf-portfolio/assets/img/tensorflow-logo-1.png" class="responsive-img" />TensorFlow
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
+                <img alt="" src="/mbahnaf-portfolio/assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
               </div>
             </div>
           </div>
@@ -599,7 +599,7 @@
                   <div class="col s6">
                     <div class="card">
                       <div class="card-image">
-                        <img src="/assets/img/GCC_badge_IT_Support_1000x1000.png">
+                        <img src="/mbahnaf-portfolio/assets/img/GCC_badge_IT_Support_1000x1000.png">
                       </div>
                       <div class="card-content">
                         <a href="https://www.credly.com/badges/8938d9a6-05b8-4884-b235-d915649a67fc" target="_blank"><span class="card-title teal-text">Google IT Support Certificate</span></a>
@@ -610,7 +610,7 @@
                   <div class="col s6 m6">
                     <div class="card">
                       <div class="card-image">
-                        <img src="/assets/img/GCC_badge_python_1000x1000.png">
+                        <img src="/mbahnaf-portfolio/assets/img/GCC_badge_python_1000x1000.png">
                       </div>
                       <div class="card-content">
                         <a href="https://www.credly.com/badges/7f2762b4-8dae-4987-bbf3-f403600ee2c0" target="_blank"><span class="card-title teal-text">Google IT Automation Certificate</span></a>
