--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="./mbahnaf-portfolio/assets/img/passport-new.jpg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="/mbahnaf-portfolio/assets/img/passport-new.jpg" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
       
