--- a/index.html
+++ b/index.html
@@ -729,19 +729,19 @@
           <div>
             <h5 class="white-text">More Links</h5>
             
-              <div class = "col s2 m2">
+              <div class = "col s1 m1">
                 <a class="grey-text text-lighten-3" href="/">Home</a>
               </div>
-              <div class = "col s2 m2">
+              <div class = "col s1 m1">
                 <a class="grey-text text-lighten-3" href="https://github.com/mbahnaf" target="_blank">GitHub</a>
               </div>
-              <div class = "col s2 m2">
+              <div class = "col s1 m1">
                 <a class="grey-text text-lighten-3" href="https://linkedin.com/in/mbahnaf" target="_blank">LinkedIn</a>
               </div>
-              <div class = "col s2 m2">
+              <div class = "col s1 m1">
                 <a class="grey-text text-lighten-3" href="https://hackerrank.com/mbahnaf" target="_blank">HackerRank</a>
               </div>
-              <div class = "col s2 m2">
+              <div class = "col s1 m1">
                 <a class="grey-text text-lighten-3" href="https://www.credly.com/users/mutasim-billah/badges" target="_blank">Credly</a>
               </div>
               <!-- <li>
@@ -755,7 +755,7 @@
           </div>
         </div>
       </div>
-      <div class="footer-copyright teal darken-1">
+      <div class="footer-copyright teal darken-1 hide-on-small">
         <div class="container">
           Muhammad Mutasim Billah &copy; 2023
           
