--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
             <div class="row text-left">
               <div class="container">
                 <div class="row">
-                  <div class="col6 s1 m2">
+                  <div class="col6 s6 m3">
                     <div class="card">
                       <div class="card-image">
                         <img src="/mbahnaf-portfolio/assets/img/GCC_badge_IT_Support_1000x1000.png">
@@ -607,7 +607,7 @@
                     </div>
                   </div>
 
-                  <div class="col6 s1 m2">
+                  <div class="col6 s6 m3">
                     <div class="card">
                       <div class="card-image">
                         <img src="/mbahnaf-portfolio/assets/img/GCC_badge_python_1000x1000.png">
@@ -729,19 +729,19 @@
           <div>
             <h5 class="white-text">More Links</h5>
             
-              <div class = "col6 s1 m1">
+              <div class = "col6 s6 m3">
                 <a class="grey-text text-lighten-3" href="/">Home</a>
               </div>
-              <div class = "col6 s1 m1">
+              <div class = "col6 s6 m3">
                 <a class="grey-text text-lighten-3" href="https://github.com/mbahnaf" target="_blank">GitHub</a>
               </div>
-              <div class = "col6 s1 m1">
+              <div class = "col6 s6 m3">
                 <a class="grey-text text-lighten-3" href="https://linkedin.com/in/mbahnaf" target="_blank">LinkedIn</a>
               </div>
-              <div class = "col6 s1 m1">
+              <div class = "col6 s6 m3">
                 <a class="grey-text text-lighten-3" href="https://hackerrank.com/mbahnaf" target="_blank">HackerRank</a>
               </div>
-              <div class = "col6 s1 m1">
+              <div class = "col6 s6 m3">
                 <a class="grey-text text-lighten-3" href="https://www.credly.com/users/mutasim-billah/badges" target="_blank">Credly</a>
               </div>
               <!-- <li>
@@ -755,10 +755,11 @@
           </div>
         </div>
       </div>
-      <div class="footer-copyright teal darken-1 hide-on-small">
+      <div class="footer-copyright teal darken-1">
         <div class="container">
+          <div class= "col1 s1 m1">
           Muhammad Mutasim Billah &copy; 2023
-          
+          </div>
         </div>
       </div>
     </footer>
