--- a/index.html
+++ b/index.html
@@ -485,28 +485,27 @@
       <h3 class="page-title white-text teal">Skills</h3>
       <div class="container">
         <!-- Languages and Databases -->
-        <div class="card">
+         <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Languages and Databases</h4>
             <div class="row text-center">
-              <div class="col s6 m4">
-                <img alt="" src="/mbahnaf-portfolio/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />
-                <h5>Python</h5>
+              <div class="col s4 m2">
+                <img alt="" src="/mbahnaf-portfolio/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
-              <div class="col s6 m4">
-                <img alt="" src="/mbahnaf-portfolio/assets/img/html5-300x300.jpg" class="responsive-img" /><h5>HTML5</h5>
+              <div class="col s4 m2">
+                <img alt="" src="/mbahnaf-portfolio/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
               </div>
-              <div class="col s6 m4">
-                <img alt="" src="/mbahnaf-portfolio/assets/img/css3-300x300.jpg" class="responsive-img" /><h5>CSS3</h5>
+              <div class="col s4 m2">
+                <img alt="" src="/mbahnaf-portfolio/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
               </div>
-              <div class="col s6 m4">
-                <img alt="" src="/mbahnaf-portfolio/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" /><h5>MySQL</h5>
+              <div class="col s4 m2">
+                <img alt="" src="/mbahnaf-portfolio/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
               </div>
-              <div class="col s6 m4">
-                <img alt="" src="/mbahnaf-portfolio/assets/img/postgresql-logo.png" class="responsive-img" /><h5>PostgreSQL</h5>
+              <div class="col s4 m2">
+                <img alt="" src="/mbahnaf-portfolio/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
               </div>
-              <div class="col s6 m4">
-                <img alt="" src="/mbahnaf-portfolio/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" /><h5>Bash</h5>
+              <div class="col s4 m2">
+                <img alt="" src="/mbahnaf-portfolio/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Bash
               </div>
             </div>
           </div>
@@ -567,23 +566,23 @@
           <div class="card-content">
             <h4 class="brown-text light">Tools and Technologies</h4>
             <div class="row text-center">
-              <div class="col s6 m4">
-                <img alt="" src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" class="responsive-img" width="100" height="100"/><h5>Git</h5>
+              <div class="col s4 m2">
+                <img alt="" src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" class="responsive-img" width="100" height="100" />Git
               </div>
-              <div class="col s6 m4">
-                <img alt="" src="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-ar21.svg" class="responsive-img"/><h5>AWS</h5>
+              <div class="col s4 m2">
+                <img alt="" src="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-ar21.svg" class="responsive-img" />AWS
               </div>              
-              <div class="col s6 m4">
-                <img alt="" src="https://www.vectorlogo.zone/logos/google_cloud/google_cloud-icon.svg" class="responsive-img" width="100" height="100"/><h5>Google Cloud</h5>
+              <div class="col s4 m2">
+                <img alt="" src="https://www.vectorlogo.zone/logos/google_cloud/google_cloud-icon.svg" class="responsive-img" width="100" height="100" />Google Cloud
               </div>
-              <div class="col s6 m4">
-                <img alt="" src="https://www.vectorlogo.zone/logos/ansible/ansible-icon.svg" class="responsive-img" width="100" height="100"/><h5>Ansible</h5>
+              <div class="col s4 m2">
+                <img alt="" src="https://www.vectorlogo.zone/logos/ansible/ansible-icon.svg" class="responsive-img" width="100" height="100" />Ansible
               </div>
-              <div class="col s6 m4">
-                <img alt="" src="https://www.vectorlogo.zone/logos/kubernetes/kubernetes-icon.svg" class="responsive-img" width="100" height="100"/><h5>Kubernetes</h5>
+              <div class="col s4 m2">
+                <img alt="" src="https://www.vectorlogo.zone/logos/kubernetes/kubernetes-icon.svg" class="responsive-img" width="100" height="100" />Kubernetes
               </div>
-              <div class="col s6 m4">
-                <img alt="" src="https://www.vectorlogo.zone/logos/docker/docker-official.svg" class="responsive-img" width="100" height="100"/><h5>Docker</h5>
+              <div class="col s4 m2">
+                <img alt="" src="https://www.vectorlogo.zone/logos/docker/docker-official.svg" class="responsive-img" width="100" height="100" />Docker
               </div>
             </div>
           </div>
@@ -755,7 +754,7 @@
           </div>
         </div>
       </div>
-      <div class="footer-copyright teal darken-1">
+      <div class="footer-copyright teal">
         <div class="container">
           <div class= "col s12 m12">
           Muhammad Mutasim Billah &copy; 2023
