--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
         </p>
       </div>
     </section>
-    <footer class="page-footer teal lighten-1">
+    <footer class="page-footer teal">
       <div class="container">
         <div class="row">          
           <div>
