--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
             
           </div>
         </div>
-        <div class="footer-copyright teal">
+        <div class="footer-copyright teal text-center">
         <div class="container">
           <div class= "col s12 m12">
           Muhammad Mutasim Billah &copy; 2023
