--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
             <h5 class="white-text">More Links</h5>
             
               <div class = "col s12 m4">
-                <a class="grey-text text-lighten-3" href="/">Home</a>
+                <a class="grey-text text-lighten-3" href="#intro">Home</a>
               </div>
               <div class = "col s12 m4">
                 <a class="grey-text text-lighten-3" href="https://github.com/mbahnaf" target="_blank">GitHub</a>
@@ -753,6 +753,7 @@
             
           </div>
         </div>
+        </br>
         <div class="footer-copyright teal text-center">
         <div class="container">
           <div class= "col s12 m12">
