--- a/index.html
+++ b/index.html
@@ -732,16 +732,19 @@
                 <a class="grey-text text-lighten-3" href="#intro">Home</a>
               </div>
               <div class = "col s12 m4">
-                <a class="grey-text text-lighten-3" href="https://github.com/mbahnaf" target="_blank">GitHub</a>
+                <a class="grey-text text-lighten-3" href="https://join.skype.com/invite/uzlxbJ9sTn2z" target="_blank">Skype</a>
               </div>
               <div class = "col s12 m4">
-                <a class="grey-text text-lighten-3" href="https://linkedin.com/in/mbahnaf" target="_blank">LinkedIn</a>
+                <a class="grey-text text-lighten-3" href="https://g.dev/mbahnaf" target="_blank">Google Developer Profile</a>
               </div>
               <div class = "col s12 m4">
                 <a class="grey-text text-lighten-3" href="https://hackerrank.com/mbahnaf" target="_blank">HackerRank</a>
               </div>
               <div class = "col s12 m4">
                 <a class="grey-text text-lighten-3" href="https://www.credly.com/users/mutasim-billah/badges" target="_blank">Credly</a>
+              </div>
+              <div class = "col s12 m4">
+                <a class="grey-text text-lighten-3" href="https://www.cloudskillsboost.google/public_profiles/8f19cbd5-8940-4aed-969f-b68914c733af" target="_blank">Qwiklabs</a>
               </div>
               <!-- <li>
                 <a class="grey-text text-lighten-3" href="#education">Education</a>
