--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
     <footer class="page-footer teal">
       <div class="container">
                   
-          <div>
+          <div class = "row">
             <h5 class="white-text">More Links</h5>
             
               <div class = "col s12 m4">
@@ -747,7 +747,7 @@
                 <a class="white-text" href="https://www.cloudskillsboost.google/public_profiles/8f19cbd5-8940-4aed-969f-b68914c733af" target="_blank">Qwiklabs</a>
               </div>                        
           </div>
-          <div class="footer-copyright teal text-center">        
+          <div class="white-text teal text-center">        
                 <div class= "col s12 m12">
                    Muhammad Mutasim Billah &copy; 2023
                 </div>        
