--- a/index.html
+++ b/index.html
@@ -728,30 +728,28 @@
           <div class = "row">
             <h5 class="white-text">More Links</h5>
             
-              <div class = "col s12 m4">
+              <div class = "col s6 m4">
                 <a class="white-text" href="#intro">Home</a>
               </div>
-              <div class = "col s12 m4">
+              <div class = "col s6 m4">
                 <a class="white-text" href="https://join.skype.com/invite/uzlxbJ9sTn2z" target="_blank">Skype</a>
               </div>
-              <div class = "col s12 m4">
+              <div class = "col s6 m4">
                 <a class="white-text" href="https://g.dev/mbahnaf" target="_blank">Google Developer Profile</a>
               </div>
-              <div class = "col s12 m4">
+              <div class = "col s6 m4">
                 <a class="white-text" href="https://hackerrank.com/mbahnaf" target="_blank">HackerRank</a>
               </div>
-              <div class = "col s12 m4">
+              <div class = "col s6 m4">
                 <a class="white-text" href="https://www.credly.com/users/mutasim-billah/badges" target="_blank">Credly</a>
               </div>
-              <div class = "col s12 m4">
+              <div class = "col s6 m4">
                 <a class="white-text" href="https://www.cloudskillsboost.google/public_profiles/8f19cbd5-8940-4aed-969f-b68914c733af" target="_blank">Qwiklabs</a>
               </div>                        
           </div>                
       </div>
-      <div class="white-text teal text-center">        
-                <div class= "col s12 m12">
-                   Muhammad Mutasim Billah &copy; 2023
-                </div>        
+      <div class="teal text-center">               
+                   Muhammad Mutasim Billah &copy; 2023                        
        </div>
     </footer>
   </main>
