--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
               </div>                        
           </div>                
       </div>
-      <div class="teal text-center">               
+      <div class="container teal text-center">               
                    Muhammad Mutasim Billah &copy; 2023                        
        </div>
     </footer>
