--- a/index.html
+++ b/index.html
@@ -745,12 +745,13 @@
               </div>
               <div class = "col s6 m4">
                 <a class="white-text" href="https://www.cloudskillsboost.google/public_profiles/8f19cbd5-8940-4aed-969f-b68914c733af" target="_blank">Qwiklabs</a>
-              </div>                        
+              </div>            
+            <div class="white-text teal text-center">               
+                   Muhammad Mutasim Billah &copy; 2023                        
+            </div>
           </div>                
       </div>
-      <div class="container teal text-center">               
-                   Muhammad Mutasim Billah &copy; 2023                        
-       </div>
+      
     </footer>
   </main>
 
