--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
         </p>
       </div>
     </section>
-    <footer class="page-footer teal">
+    <!--<footer class="page-footer teal">
       <div class="container">
                   
           <div class = "row">
@@ -752,7 +752,7 @@
             </div>
           </div>                
       </div>      
-    </footer>
+    </footer> -->
   </main>
 
   <!-- typed.js -->
