--- a/index.html
+++ b/index.html
@@ -757,18 +757,18 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                <h5 class="white-text">Feel free to explore!</h5>
+                <p class="grey-text text-lighten-4">Find me on other platforms that showcase my expertise</p>
               </div>
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                  <li><a class="white-text" href="#intro">Home</a></li>
-                  <li><a class="white-text" href="https://join.skype.com/invite/uzlxbJ9sTn2z" target="_blank">Skype</a></li>
-                  <li><a class="white-text" href="https://g.dev/mbahnaf" target="_blank">Google Developer Profile</a></li>
-                  <li><a class="white-text" href="https://hackerrank.com/mbahnaf" target="_blank">HackerRank</a></li>
-                  <li><a class="white-text" href="https://www.credly.com/users/mutasim-billah/badges" target="_blank">Credly</a></li>
-                  <li><a class="white-text" href="https://www.cloudskillsboost.google/public_profiles/8f19cbd5-8940-4aed-969f-b68914c733af" target="_blank">Qwiklabs</a></li>
+                  <li><a class="grey-text lighten-3" href="#intro">Home</a></li>
+                  <li><a class="grey-text lighten-3" href="https://join.skype.com/invite/uzlxbJ9sTn2z" target="_blank">Skype</a></li>
+                  <li><a class="grey-text lighten-3" href="https://g.dev/mbahnaf" target="_blank">Google Developer Profile</a></li>
+                  <li><a class="grey-text lighten-3" href="https://hackerrank.com/mbahnaf" target="_blank">HackerRank</a></li>
+                  <li><a class="grey-text lighten-3" href="https://www.credly.com/users/mutasim-billah/badges" target="_blank">Credly</a></li>
+                  <li><a class="grey-text lighten-3" href="https://www.cloudskillsboost.google/public_profiles/8f19cbd5-8940-4aed-969f-b68914c733af" target="_blank">Qwiklabs</a></li>
                 </ul>
               </div>
             </div>
