--- a/index.html
+++ b/index.html
@@ -205,8 +205,7 @@
               <h2>Hi, I'm <span class="teal">Muhammad Mutasim Billah.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#52f0d5"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Experienced cloud system engineer with 4 years of relevant background in the industry. I have a background working on high-availability services like satellite networks, OTT video streaming platforms, broadcast systems and datacenter compute systems.I have worked on technologies like CI/CD, IaC and Cloud.
-
+              <h5>Experienced cloud system engineer with 4 years of relevant background in the industry. I have a background working on high-availability services like satellite networks, OTT video streaming platforms, broadcast systems and datacenter compute systems.
                 I am passionate about designing systems that solve real-world problems impacting millions of users.</h5>
             </div>
             <div class="social">
@@ -459,6 +458,7 @@
                 <span class="card-title brown-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
+                  <li><b>Tools:</b>Ovirt, GlusterFS, NFS, Grafana</li>
                   <li>Designed the virtualization elements from scratched and deployed them personally and completed connectivity.</li>
                   <li>Completed storage solution using GlusterFS.</li>
                   <li>Used Ovirt as the virtualization platform.</li>
