--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                     class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><b>Tools:</b>Ovirt, GlusterFS, NFS, Grafana</li>
-                  <li>Designed the virtualization elements from scratched and deployed them personally and completed connectivity.</li>
+                  <li>Designed the system from scratch and deployed the physical elements personally and completed connectivity.</li>
                   <li>Completed storage solution using GlusterFS.</li>
                   <li>Used Ovirt as the virtualization platform.</li>
                   <li>Migrated VMs from other platforms.</li>
