--- a/index.html
+++ b/index.html
@@ -374,8 +374,7 @@
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
+                <span class="card-title grey-text text-darken-4">DataFire Networks<i class="material-icons right">close</i></span>
                 <ul>
                   <li><b>Tools:</b> PHP, Nginx, MySQL</li>
                   <li>Customized the product and optimized it.</li>
@@ -414,8 +413,7 @@
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
+                <span class="card-title grey-text text-darken-4">Multiviewer System<i class="material-icons right">close</i></span>
                 <ul>
                   <li><b>Tools:</b> Windows Server, NVIDIA GPU, Cinegy Multiviewer, Display Design</li>
                   <li>Setup a Windows server and setup Cinegy Multiviewer with appropriate licenses.</li>
@@ -455,8 +453,7 @@
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title brown-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
+                <span class="card-title grey-text text-darken-4">KRC Cloud Solution<i class="material-icons right">close</i></span>
                 <ul>
                   <li><b>Tools:</b>Ovirt, GlusterFS, NFS, Grafana</li>
                   <li>Designed the system from scratch and deployed the physical elements personally and completed connectivity.</li>
